add CSS, create page files, add red background and center align SPI logo

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Home | Team Springfield Pie</title>
 </head>
 <body>
-    <header>
-        <h1><a href="index.html"><img src="/img/Team-Springfield-Logo.png"></a></h1>
+    <header class="header">
+        <div>
+            <a href="about.html">About Us</a>
+            <a href="news.html">In the News</a>
+            <h1 class="spiLogo">
+                <a href="index.html"><img src="/img/Team-Springfield-Logo.png" alt="Team Springfield Pie Logo" style="width:500px;height:200px"></a>
+            </h1>
+            <a href="https://www.dominos.com">Order</a>
+            <a href="contact.html">Contact Us</a>
+        </div>
     </header>
-    <nav>
-        <ul>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="news.html">In the News</a></li>
-            <li><a href="https://www.dominos.com">Order</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-    </nav>
     <main>
         <!--Add repeating video in the background-->
     </main>
