--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,13 +9,14 @@
 <body>
     <header class="header">
         <div>
-            <a href="about.html">About Us</a>
-            <a href="news.html">In the News</a>
-            <h1 class="spiLogo">
-                <a href="index.html"><img src="/img/Team-Springfield-Logo.png" alt="Team Springfield Pie Logo" style="width:500px;height:200px"></a>
-            </h1>
-            <a href="https://www.dominos.com">Order</a>
-            <a href="contact.html">Contact Us</a>
+            <nav>
+                <ul class="navbar">
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="news.html">In the News</a></li>
+                    <li><a href="https://www.dominos.com">Order</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>            
+            </nav>
         </div>
     </header>
     <main>
